# pyglsl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shader.py  test.py  test_requirements.txt  tester.py
pyglsl/: __init__.py  constants.py  glsl.py  interface.py  parse.py  shaderdef.py  stage.py  types.py
tests/: shader.py  test.py  test_compilation.py  test_compute.py  test_errors.py  test_integration.py  test_multiple_returns.py  test_tessellation.py  tester.py
